# Scaler-Meta-AI-Hackathon

./: README.md
openenv-software-dev/: Dockerfile  inference.py  openenv.yaml  pyproject.toml
openenv-software-dev/client/: client.py
openenv-software-dev/server/: __init__.py  app.py  models.py
openenv-software-dev/server/environments/: __init__.py  software_dev_env.py
openenv-software-dev/server/graders/: graders.py
openenv-software-dev/server/sandbox/: executor.py  filesystem.py
openenv-software-dev/server/tasks/: base.py  catalog.py
openenv-software-dev/tests/: test_env.py  test_graders.py  test_integration.py
openenv-software-dev/training/: train_grpo.py
openenv-software-dev/training/results/: training_metrics.json
