[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-software-dev"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for software development tasks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "openenv-software-dev-team" }]
keywords = ["reinforcement-learning", "openenv", "software-engineering", "llm", "grpo"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
llm   = ["httpx>=0.25.0", "openai>=1.0"]
hub   = ["huggingface_hub>=0.20.0"]
train = ["torch>=2.0", "trl>=0.7.0"]
dev   = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0", "httpx>=0.25.0"]
all   = ["openenv-software-dev[llm,hub,train,dev]"]

[project.scripts]
openenv-softdev = "server.app:app"

[tool.hatch.build.targets.wheel]
packages = ["server", "client", "training"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
